--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,6 @@ jspm_packages/
 
 # TypeScript v1 declaration files
 typings/
-config/*.js
 
 # Optional npm cache directory
 .npm
@@ -60,3 +59,5 @@ config/*.js
 
 # next.js build output
 .next
+config/projectInfo.js
+config/*.js
