--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Rafael Pradella",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "webfont": "^8.1.3"
   },
   "devDependencies": {
